--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,85 @@ p {
 }
 
 body {
-  background-color: #fffbf7;
+  background-color: pink;
+}
+
+main {
+  margin: 0;
 }
 
 button {
   background-color: #025157;
   color: #fff;
 }
+
+.header {
+  margin: 40px 20px 0 20px;
+  font-size: 0;
+}
+
+/* Designación de un cierto display para todos los hijos directos de la class header*/
+.header > * {
+  display: inline-block;
+  font-size: 16px;
+  vertical-align: middle;
+  height: 100%;
+  line-height: 45px;
+}
+
+.logo {
+  width: 15%;
+}
+
+.logo > img {
+  height: 100%;
+}
+
+.navbar {
+  width: 70%;
+  height: 45px;
+  /*Revisar si al final es rigth*/  
+  text-align: left;
+  color: #025157;
+  font-weight: 500;
+  font-family: sans-serif;
+}
+
+ul {  
+color: #025157;
+}
+
+li {
+  display: inline;
+  margin: 0 45px;
+  
+}
+
+.actions {
+  width: 15%;
+  /*Revisar si al final es rigth*/  
+  text-align: left;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.actions > * {
+  margin: 0 10px;
+}
+
+.actions > a{
+  color: #67b54b;
+
+}
+
+.actions > button {
+  color: white;
+  background-color: #67b54b;
+  padding: 12px 14px;
+  border: none;
+  border-radius: 5px;
+}
+
+
+
+
