--- a/styles.css
+++ b/styles.css
@@ -139,3 +139,89 @@ li {
     right: 0;
     background-color: #fffbf7;
 }
+
+.clients {
+    background-color: #a1d683;
+    display: flex;
+    width: 100%;
+    margin: auto;
+}
+
+.blogs {
+    margin: 120px 50px;
+    width: 50%;
+}
+
+.blogs>h2 {
+    font-family: 'PT Serif', serif;
+    color: #025157;
+    font-weight: bold;
+    margin: 0;
+    font-size: 30px;
+    text-align: left;
+}
+
+.blogs>p {
+    font-family: 'Crimson Text', serif;
+    color: black;
+    font-size: 15px;
+    text-align: left;
+}
+
+.blogs>button {
+    display: block;
+    border-radius: 8px;
+    border: none;
+    width: 150px;
+    height: 35px;
+    font-weight: bold;
+}
+
+.case_study {
+    width: 250px;
+    height: 550px;
+    background-color: white;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    margin: auto;
+}
+
+.case_study>h5 {
+    font-family: 'PT Serif', serif;
+    color: #025157;
+    font-weight: bold;
+    text-align: left;
+    padding-left: 20px;
+}
+
+.case_study>p {
+    font-family: 'Crimson Text', serif;
+    color: black;
+    font-size: 15px;
+    text-align: left;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.goals {
+    display: flex;
+    margin-left: 20px;
+}
+
+.goals>p {
+    font-size: 15px;
+}
+
+.goals>img {
+    margin-top: 20px;
+}
+
+.case_study>button {
+    display: block;
+    border-radius: 8px;
+    border: none;
+    width: 80%;
+    height: 35px;
+    font-weight: bold;
+    margin: 20px auto;
+}
